--- a/try.ipynb
+++ b/try.ipynb
@@ -146,7 +146,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "7a0f0e2c-3ca6-48f2-b5fe-368caa3175df",
+       "ref": "dcc2df8d-3025-4788-bd51-67a15a7bfc6e",
        "rows": [
         [
          "0",
@@ -308,8 +308,7 @@
        "      <th>humidity_%</th>\n",
        "      <th>sunlight_hours</th>\n",
        "      <th>irrigation_type</th>\n",
-       "      <th>fertilizer_type</th>\n",
-       "      <th>pesticide_usage_ml</th>\n",
+       "      <th>...</th>\n",
        "      <th>sowing_date</th>\n",
        "      <th>harvest_date</th>\n",
        "      <th>total_days</th>\n",
@@ -335,8 +334,7 @@
        "      <td>77.03</td>\n",
        "      <td>7.27</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Organic</td>\n",
-       "      <td>6.34</td>\n",
+       "      <td>...</td>\n",
        "      <td>2024-01-08</td>\n",
        "      <td>2024-05-09</td>\n",
        "      <td>122</td>\n",
@@ -360,8 +358,7 @@
        "      <td>61.13</td>\n",
        "      <td>5.67</td>\n",
        "      <td>Sprinkler</td>\n",
-       "      <td>Inorganic</td>\n",
-       "      <td>9.60</td>\n",
+       "      <td>...</td>\n",
        "      <td>2024-02-04</td>\n",
        "      <td>2024-05-26</td>\n",
        "      <td>112</td>\n",
@@ -385,8 +382,7 @@
        "      <td>68.87</td>\n",
        "      <td>8.23</td>\n",
        "      <td>Drip</td>\n",
-       "      <td>Mixed</td>\n",
-       "      <td>15.26</td>\n",
+       "      <td>...</td>\n",
        "      <td>2024-02-03</td>\n",
        "      <td>2024-06-26</td>\n",
        "      <td>144</td>\n",
@@ -410,8 +406,7 @@
        "      <td>70.46</td>\n",
        "      <td>5.03</td>\n",
        "      <td>Sprinkler</td>\n",
-       "      <td>Organic</td>\n",
-       "      <td>25.80</td>\n",
+       "      <td>...</td>\n",
        "      <td>2024-02-21</td>\n",
        "      <td>2024-07-04</td>\n",
        "      <td>134</td>\n",
@@ -435,8 +430,7 @@
        "      <td>55.73</td>\n",
        "      <td>7.93</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Mixed</td>\n",
-       "      <td>25.65</td>\n",
+       "      <td>...</td>\n",
        "      <td>2024-02-05</td>\n",
        "      <td>2024-05-20</td>\n",
        "      <td>105</td>\n",
@@ -450,20 +444,42 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    farm_id       region crop_type  ...  longitude  NDVI_index  crop_disease_status\n",
-       "0  FARM0001  North India     Wheat  ...  82.997689        0.63                 Mild\n",
-       "1  FARM0002    South USA   Soybean  ...  70.869009        0.58                  NaN\n",
-       "2  FARM0003    South USA     Wheat  ...  79.068206        0.80                 Mild\n",
-       "3  FARM0004  Central USA     Maize  ...  85.519998        0.44                  NaN\n",
-       "4  FARM0005  Central USA    Cotton  ...  81.691720        0.84               Severe\n",
+       "    farm_id       region crop_type  soil_moisture_%  soil_pH  temperature_C  \\\n",
+       "0  FARM0001  North India     Wheat            35.95     5.99          17.79   \n",
+       "1  FARM0002    South USA   Soybean            19.74     7.24          30.18   \n",
+       "2  FARM0003    South USA     Wheat            29.32     7.16          27.37   \n",
+       "3  FARM0004  Central USA     Maize            17.33     6.03          33.73   \n",
+       "4  FARM0005  Central USA    Cotton            19.37     5.92          33.86   \n",
+       "\n",
+       "   rainfall_mm  humidity_%  sunlight_hours irrigation_type  ... sowing_date  \\\n",
+       "0        75.62       77.03            7.27             NaN  ...  2024-01-08   \n",
+       "1        89.91       61.13            5.67       Sprinkler  ...  2024-02-04   \n",
+       "2       265.43       68.87            8.23            Drip  ...  2024-02-03   \n",
+       "3       212.01       70.46            5.03       Sprinkler  ...  2024-02-21   \n",
+       "4       269.09       55.73            7.93             NaN  ...  2024-02-05   \n",
+       "\n",
+       "   harvest_date total_days yield_kg_per_hectare  sensor_id   timestamp  \\\n",
+       "0    2024-05-09        122              4408.07   SENS0001  2024-03-19   \n",
+       "1    2024-05-26        112              5389.98   SENS0002  2024-04-21   \n",
+       "2    2024-06-26        144              2931.16   SENS0003  2024-02-28   \n",
+       "3    2024-07-04        134              4227.80   SENS0004  2024-05-14   \n",
+       "4    2024-05-20        105              4979.96   SENS0005  2024-04-13   \n",
+       "\n",
+       "    latitude  longitude  NDVI_index  crop_disease_status  \n",
+       "0  14.970941  82.997689        0.63                 Mild  \n",
+       "1  16.613022  70.869009        0.58                  NaN  \n",
+       "2  19.503156  79.068206        0.80                 Mild  \n",
+       "3  31.071298  85.519998        0.44                  NaN  \n",
+       "4  16.568540  81.691720        0.84               Severe  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 5,
    "id": "5426e60e",
    "metadata": {},
    "outputs": [
@@ -643,7 +659,7 @@
          "type": "integer"
         }
        ],
-       "ref": "80700df0-0b21-45b1-94f7-a99356cf0398",
+       "ref": "0333ae4f-0a85-460d-b3a2-23275a9c03af",
        "rows": [
         [
          "0",
@@ -928,17 +944,43 @@
        "</div>"
       ],
       "text/plain": [
-       "        region crop_type  ...  harvest_month  timestamp_month\n",
-       "0  North India     Wheat  ...              5                3\n",
-       "1    South USA   Soybean  ...              5                4\n",
-       "2    South USA     Wheat  ...              6                2\n",
-       "3  Central USA     Maize  ...              7                5\n",
-       "4  Central USA    Cotton  ...              5                4\n",
+       "        region crop_type  soil_moisture_%  soil_pH  temperature_C  \\\n",
+       "0  North India     Wheat            35.95     5.99          17.79   \n",
+       "1    South USA   Soybean            19.74     7.24          30.18   \n",
+       "2    South USA     Wheat            29.32     7.16          27.37   \n",
+       "3  Central USA     Maize            17.33     6.03          33.73   \n",
+       "4  Central USA    Cotton            19.37     5.92          33.86   \n",
        "\n",
-       "[5 rows x 20 columns]"
+       "   rainfall_mm  humidity_%  sunlight_hours irrigation_type fertilizer_type  \\\n",
+       "0        75.62       77.03            7.27            None         Organic   \n",
+       "1        89.91       61.13            5.67       Sprinkler       Inorganic   \n",
+       "2       265.43       68.87            8.23            Drip           Mixed   \n",
+       "3       212.01       70.46            5.03       Sprinkler         Organic   \n",
+       "4       269.09       55.73            7.93            None           Mixed   \n",
+       "\n",
+       "   pesticide_usage_ml  total_days  yield_kg_per_hectare   latitude  longitude  \\\n",
+       "0                6.34         122               4408.07  14.970941  82.997689   \n",
+       "1                9.60         112               5389.98  16.613022  70.869009   \n",
+       "2               15.26         144               2931.16  19.503156  79.068206   \n",
+       "3               25.80         134               4227.80  31.071298  85.519998   \n",
+       "4               25.65         105               4979.96  16.568540  81.691720   \n",
+       "\n",
+       "   NDVI_index crop_disease_status  sowing_month  harvest_month  \\\n",
+       "0        0.63                Mild             1              5   \n",
+       "1        0.58                None             2              5   \n",
+       "2        0.80                Mild             2              6   \n",
+       "3        0.44                None             2              7   \n",
+       "4        0.84              Severe             2              5   \n",
+       "\n",
+       "   timestamp_month  \n",
+       "0                3  \n",
+       "1                4  \n",
+       "2                2  \n",
+       "3                5  \n",
+       "4                4  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "id": "b8c115a5",
    "metadata": {},
    "outputs": [
@@ -1067,6 +1109,18 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c24dd4dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correlations = df.corr(numeric_only=True)[\"yield_kg_per_hectare\"].sort_values(ascending=False)\n",
+    "\n",
+    "print(correlations)"
    ]
   },
   {
@@ -1186,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eab785b",
+   "id": "23a91848",
    "metadata": {},
    "outputs": [],
    "source": [
