--- a/try.ipynb
+++ b/try.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 2,
    "id": "582c7e3b",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 4,
    "id": "9fe0df29",
    "metadata": {},
    "outputs": [
@@ -1113,10 +1113,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c24dd4dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yield_kg_per_hectare            1.000000\n",
+      "crop_type_Soybean               0.100162\n",
+      "pesticide_usage_ml              0.041290\n",
+      "humidity_%                      0.039021\n",
+      "NDVI_index                      0.038099\n",
+      "region_South India              0.036166\n",
+      "temperature_C                   0.027875\n",
+      "crop_disease_status_None        0.025120\n",
+      "irrigation_type_Sprinkler       0.024795\n",
+      "soil_pH                         0.024274\n",
+      "longitude                       0.022359\n",
+      "sunlight_hours                  0.020284\n",
+      "crop_type_Wheat                 0.018074\n",
+      "irrigation_type_Manual          0.017606\n",
+      "region_East Africa              0.009009\n",
+      "timestamp_month                 0.005527\n",
+      "fertilizer_type_Organic         0.003818\n",
+      "crop_disease_status_Severe     -0.001838\n",
+      "harvest_month                  -0.007460\n",
+      "total_days                     -0.007570\n",
+      "region_North India             -0.015545\n",
+      "sowing_month                   -0.016000\n",
+      "region_South USA               -0.019882\n",
+      "crop_type_Maize                -0.022935\n",
+      "irrigation_type_None           -0.033924\n",
+      "fertilizer_type_Mixed          -0.036524\n",
+      "latitude                       -0.038127\n",
+      "crop_type_Rice                 -0.051623\n",
+      "crop_disease_status_Moderate   -0.053583\n",
+      "soil_moisture_%                -0.063038\n",
+      "rainfall_mm                    -0.076802\n",
+      "Name: yield_kg_per_hectare, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "correlations = df.corr(numeric_only=True)[\"yield_kg_per_hectare\"].sort_values(ascending=False)\n",
     "\n",
@@ -1216,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "id": "55ab2536",
    "metadata": {},
    "outputs": [
@@ -1230,19 +1269,29 @@
     }
    ],
    "source": [
-    "xgb = XGBRegressor(n_estimators=500, learning_rate=0.01, random_state=42)\n",
+    "xgb = XGBRegressor(n_estimators=500,colsample_bytree = 0.7, learning_rate=0.01, random_state=42)\n",
     "xgb.fit(x_train, y_train)\n",
     "y_pred_xgb = xgb.predict(x_test)\n",
     "print(\"XGBoost Mean Squared Error:\", mean_squared_error(y_test, y_pred_xgb))\n",
-    "print(\"XGBoost R^2 Score:\", r2_score(y_test, y_pred_xgb))"
+    "print(\"XGBoost R^2 Score:\", r2_score(y_test, y_pred_xgb))\n",
+    "# Best Params: {'colsample_bytree': 0.7, 'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 100, 'subsample': 0.7}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "23a91848",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Params: {'colsample_bytree': 0.7, 'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 100, 'subsample': 0.7}\n",
+      "Best R^2 Score: -0.001302562584768685\n"
+     ]
+    }
+   ],
    "source": [
     "from xgboost import XGBRegressor\n",
     "from sklearn.model_selection import GridSearchCV\n",
